# sudoku

./: .gitignore  Cargo.toml  LICENSE  README.md  fuzz-afl.sh  fuzz-honggfuzz.sh  fuzz-libfuzz.sh
.github/workflows/: build.yml  codeql.yml  rust-clippy.yml  scorecard.yml
afl/in/: 1.csv  2.csv  5.csv
examples/: 3.csv  4.csv  hang1.csv  invalidchars1.csv
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzzer-afl/: Cargo.toml
fuzzer-afl/src/: main.rs
fuzzer-honggfuzz/: Cargo.toml
fuzzer-honggfuzz/src/: main.rs
src/: board.rs  lib.rs  main.rs
tests/: hang2.csv  invalidchars2.csv  slow  slow1.csv  slow2.csv  unicode_nr.csv
