[package]
name = "sudoku"
version = "0.1.0"
authors = ["Jeroen Lamain <jeroen.lamain@sioux.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "*"
rayon = "*"

[target.'cfg(unix)'.dependencies]
afl = "*"
stringreader = "*"

[[bin]]
name = "sudoku"
path = "src/main.rs"

[[target.'cfg(unix)'.bin]]
name = "sudokufuzz"
path = "src/fuzzmain.rs"


[lib]
name = "sudoku"

