[package]
name = "sudoku"
version = "0.1.0"
authors = ["Jeroen Lamain <jeroen.lamain@sioux.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"

[[bin]]
name = "sudoku"
path = "src/main.rs"


[lib]
name = "sudoku"
